<resources>
    <string name="app_name">lab3</string>
    <string name="pobierz_informacje">Pobierz informacje</string>
    <string name="pobierz_plik">Pobierz plik</string>
    <string name="google_logo_link">https://www.google.com/logos/doodles/2021/mothers-day-2021-may-26-6753651837108938-s.png</string>
    <string name="zero">0</string>
    <string name="pobrano_bajtow">Pobrano bajtów</string>
    <string name="typ_pliku">Typ pliku</string>
    <string name="rozmiar_pliku">Rozmiar pliku</string>
    <string name="adres">Adres</string>
</resources>